# msc-thesis

./: .env.example  .gitignore  AgentFlow_alignment.md  CHANGELOG.md  CLAUDE.md  NEXT_STEPS.md  README.md  data_flow.md  environment.yml  pyproject.toml  requirements.txt  thorough_plan.md
docs/: DS_integration_plan.md  Failure_analysis_prompt.md  ds_olmo_integration.md  failure_modes_fine_tuning_alignment.md  fine_tuning.md  fine_tuning_README.md  subagent_shared_memory_plan.md
docs/failure_mode_and_fine_tuning/: README.md  coding_failures.md  failure_mode.md  fine_tuning_plan.md  fine_tuning_plan_narrowed_down.md
docs/fine_tuning/: hparams.md
docs/superpowers/plans/: 2026-05-06-orchestrator-finetuning.md  2026-05-12-failure-mode-analyzer.md  2026-05-13-lora-flag.md  2026-05-13-vendor-agentflow.md  2026-05-14-val-set-redesign.md  2026-05-15-gepa-integration.md
docs/superpowers/specs/: 2026-05-06-orchestrator-finetuning-design.md  2026-05-12-failure-mode-analyzer-design.md  2026-05-13-lora-flag-design.md  2026-05-14-val-set-design.md  2026-05-15-gepa-integration-design.md
examples/: README.md  _common.py  example_code_generator.py  example_context_manager.py  example_image_inspector.py  example_mind_map.py  example_text_inspector.py  example_web_search.py  simple_example.py
examples/fixtures/: make_test_image.py  sample_document.txt
experiments/: prompts_export.json
experiments/configs/: generate_configs.py  template.yml
experiments/configs/1_milestone/: run_all.sh
experiments/configs/1_milestone/aime/: qwen32B_direct_tools_none.yaml  run_all.sh  (+11 more)
experiments/configs/1_milestone_no_img_no_mindmap/: run_all.sh
experiments/configs/1_milestone_no_img_no_mindmap_AgentFlow/: run_all.sh
experiments/configs/aime/: baseline.yaml  direct.yaml  subagent.yaml  test_direct.yaml  test_subagent.yaml
experiments/configs/baseline/: generate_configs.py  run_all.sh
experiments/configs/deepseek/: ds_r1_0528_8B_subagent_test.yaml  ds_r1_0528_8B_test.yaml  ds_r1_distill_14B_subagent_test.yaml  ds_r1_distill_14B_test.yaml  ds_r1_distill_32B_subagent_test.yaml  ds_r1_distill_32B_test.yaml  ds_r1_distill_7B_subagent_test.yaml  ds_r1_distill_7B_test.yaml
experiments/configs/examples/: image_inspector.yaml
experiments/configs/gaia/: README.md  baseline.yaml  direct.yaml  direct_mode.yaml  multimodel_subagent.yaml  subagent.yaml  subagent_no_thinking.yaml  subagent_planner_thinking.yaml  subagent_shared_model.yaml  test_direct.yaml  test_subagent.yaml
experiments/configs/gepa/: gaia.yaml  gpqa.yaml  smoke_test.yaml
experiments/configs/gpqa/: baseline.yaml  direct.yaml  subagent.yaml  test_direct.yaml  test_subagent.yaml
experiments/configs/hle/: baseline.yaml  direct.yaml  subagent.yaml  test_direct.yaml  test_subagent.yaml
experiments/configs/local/: qwen3_0.6b_gaia.yaml  qwen3_1.7b_gaia.yaml  qwen3_4b_gaia.yaml
experiments/configs/musique/: baseline.yaml  direct.yaml  subagent.yaml  test_subagent.yaml
experiments/configs/phi4/: phi4_mini_instruct_subagent_test.yaml  phi4_mini_instruct_test.yaml  phi4_mini_reasoning_subagent_test.yaml  phi4_mini_reasoning_test.yaml
experiments/configs/train/: config.yaml  config_smoke.yaml  config_smoke8b.yaml
experiments/scripts/: run_all_in_folder.sh
jobs/: .gitignore  001_setup.job  002_download_datasets.job  003_test_simple.job  004_export_env.job  005_export_prompts.job  006_create_configs.job  007_add_bigcodebench_libs.job  008_prepare_fine_tuning_data.job  009_test_small_ft_example.job  010_ft_orchestrator.job  011_sample_train_parquet.job  012_smoke_8b.job  QUICKSTART.md  README.md  cosmas_train_pip_reconcile.sh  environment_train.yml  submit_job.sh  train_orchestrator.sh
jobs/env_exports/: environment_full_20260222_215929.yml  environment_full_20260223_231605.yml  environment_minimal_20260222_215929.yml
jobs/gepa/: 000_install_gepa_deps.job  000_prep_gepa_data.job  001_run_gepa.job  002_smoke_gepa.job  003_smoke_gepa_gpu.job  004_run_gepa.job
jobs/scripts/: generate_job.py  launch_experiment.sh
jobs/templates/: experiment.job.j2
scripts/: analyze_results.py  download_datasets.py  export_prompts.py  generate_configs.py  generate_results_table.py  launch_verl.py  merge_lora.py  run_experiment.py  run_gepa.py  smoke_gepa.py  test_ft_smoke.py  train_orchestrator.py
scripts/failure_modes/: analyze_failure_modes.py  breakdown.csv  breakdown.json
scripts/plots/: efficiency_plots.py  failure_mode_radar.py  generate_results_table.py  main.py  orchestrator_capabilities_figure.py
scripts/tables/: ds_table.py  generate_ablation_tables.py  main.py
src/agent_engine/: __init__.py
src/agent_engine/caching/: __init__.py  manager.py
src/agent_engine/config/: __init__.py  loader.py  schema.py
src/agent_engine/core/: __init__.py  orchestrator.py  state.py  tool.py
src/agent_engine/datasets/: __init__.py  base.py
src/agent_engine/models/: __init__.py  api_provider.py  base.py  llm_shared.py  mlx_provider.py  registry.py  vllm_provider.py
src/agent_engine/prompts/: __init__.py  builder.py
src/agent_engine/tools/: __init__.py  code_generator.py  context_manager.py  graph_rag.py  image_inspector.py  mind_map.py  text_inspector.py  web_search.py
src/agent_engine/utils/: __init__.py  logging.py  parsing.py  prompting.py  reasoning_context.py  seed.py  wandb_logging.py
src/fine_tuning/: README.md  __init__.py  _agentflow_path.py  config.py  reward.py  rollout.py  trainer.py
src/fine_tuning/agentflow/: __init__.py  reward.py  runner.py  server.py
src/fine_tuning/data/: prepare.py
src/gepa_integration/: README.md  adapter.py  seed.py
tests/gepa_integration/: test_adapter.py  test_orchestrator.py  test_seed.py  test_state.py
tests/unit/: test_analyze_failure_modes.py  test_api_provider_base_url.py  test_base.py  test_builder.py  test_data_prepare.py  test_fine_tuning_config.py  test_fine_tuning_reward.py  test_fine_tuning_rollout.py  test_metrics_is_math_answer.py  test_parsing.py  test_qa_golden_answers.py  test_smoke.py  test_subagent_shared_memory.py
train/: config.yaml  config_smoke.yaml
(+775 files in other folders)
