[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engine"
version = "0.1.0"
description = "Clean, extensible agentic reasoning system with tool calling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Agata Zywot", email = "agata.zywot@gmail.com"}
]
keywords = ["llm", "agents", "reasoning", "tools", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

# Core deps pinned to match requirements.txt / multi-agent-tools environment_new.yml. Full pin set: requirements.txt
dependencies = [
    "vllm==0.12.0",
    "torch==2.9.0",
    "transformers==4.57.3",
    "tokenizers==0.22.1",
    "pyyaml==6.0.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "pillow==10.4.0",
    "openai==1.99.9",
    "anthropic==0.71.0",
    "datasets==4.4.1",
    "wandb==0.23.1",
    "jinja2==3.1.6",
    "setuptools==75.1.0",
    "nano-graphrag==0.0.8.2",
    "pyarrow==22.0.0",
    "math-verify[antlr4_13_2]>=0.7.0",
    "pypdf==5.1.0",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-engine"
Repository = "https://github.com/yourusername/agent-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
