[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engine"
version = "0.1.0"
description = "Clean, extensible agentic reasoning system with tool calling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Agata Zywot", email = "agata.zywot@gmail.com"}
]
keywords = ["llm", "agents", "reasoning", "tools", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

# Core deps shared by all backends (no GPU/vLLM deps here)
dependencies = [
    "transformers>=4.45.0",
    "tokenizers>=0.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tavily-python>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "datasets>=3.0.0",
    "wandb>=0.16.0",
    "jinja2>=3.1.0",
    "nano-graphrag>=0.0.8",
    "pyarrow>=15.0.0",
    "math-verify[antlr4_13_2]>=0.7.0",
    "pypdf>=5.0.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
# GPU/cluster backend (vLLM + CUDA). Full pin set: requirements.txt
vllm = [
    "vllm==0.12.0",
    "torch==2.9.0",
    "setuptools==75.1.0",
]
# Apple Silicon local backend
mlx = [
    "mlx-lm>=0.25.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
# RL fine-tuning dependencies (training env only — see jobs/environment_train.yml)
# Install with: pip install -e ".[training]"
# Note: torch, vllm, flash-attn, verl versions are pinned in environment_train.yml
training = [
    "verl==0.5.0",
    "filelock>=3.13.0",
    "omegaconf>=2.3.0",
    "codetiming>=1.4.0",
    # AgentFlow vendored runtime deps (src/fine_tuning/agentflow/)
    "agentops>=0.3.0",       # tracer/agentops.py, trainer.py, runner.py, reward.py
    "aiohttp>=3.9.0",        # client.py
    "fastapi>=0.110.0",      # server.py (starlette is a transitive dep of fastapi)
    "flask>=3.0.0",          # instrumentation/agentops.py, verl/daemon.py
    "opentelemetry-sdk>=1.20.0",  # types.py, tracer/agentops.py, tracer/triplet.py, runner.py
    "pydantic>=2.0.0",       # types.py, server.py, tracer/triplet.py
    "setproctitle>=1.3.0",   # instrumentation/agentops.py
    "uvicorn>=0.29.0",       # server.py
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-engine"
Repository = "https://github.com/yourusername/agent-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
